--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -209,7 +209,7 @@
     border-radius: var(--radius);
     overflow-x: auto;
     word-break: break-all;
-    height:50vh;
+    max-height: 50vh;
 }
 
 .post-content blockquote {
