--- a/content/projects/8puzzleCode/8puzzle.css
+++ b/content/projects/8puzzleCode/8puzzle.css
@@ -96,6 +96,7 @@
   align-items: center;
   width: 100%;
   height: 40vh;
+  min-height:160px;
   text-align: center;
 }
 .invisible {
@@ -139,6 +140,7 @@ body.dark #loading {
     grid-template-rows: repeat(3, 1fr);
     aspect-ratio: 1/1;
     height:25vh;
+    min-height: 150px;
     background: var(--secondary);
     border-radius: var(--radius);
     padding:0.5rem;
@@ -180,7 +182,7 @@ body.dark #loading {
 #arrowNav>p{
     /* margin:2rem; */
     user-select: none;
-    font-size: 5vh;
+    font-size: clamp(2.5rem, 7vh, 10rem);
     color: var(--tertiary);
     text-shadow: 0.1rem 0.1rem 0.5rem rgba(0, 0, 0, 0.117);
     transition: all 0.2s ease-in-out;
@@ -224,4 +226,10 @@ body.dark #solveBtn:hover{
     background-color: var(--tertiary) !important;
     border-color: var(--secondary) !important;
     color: var(--secondary) !important;
+}
+
+.disabled{
+    opacity: 0.0;
+    pointer-events: none;
+    visibility: hidden;
 }
