--- a/layouts/partials/home_info.html
+++ b/layouts/partials/home_info.html
@@ -35,6 +35,7 @@
   @media (max-width: 640px) {
     #mimojiContainer {
       width: 30%;
+      min-width: 150px;
     }
     #sideBySide {
       flex-direction: column;
