--- a/layouts/partials/home_info.html
+++ b/layouts/partials/home_info.html
@@ -72,7 +72,7 @@
       */}}
       <div class="entry-content">
         <p>
-          I'm a backend and AI developer looking for a home. <br />
+          I'm a full-stack & AI developer looking for a home. <br />
           Check out my projects below!
         </p>
       </div>
