--- a/content/projects/neuralNetCode/nn.css
+++ b/content/projects/neuralNetCode/nn.css
@@ -91,10 +91,18 @@ body.dark .trainingImage img:hover{
 
 #graphAreaContainer {
   width: 100%;
-  background-color: var(--code-bg);
-  border-radius: var(--radius);
+  /* background-color: rgb(245, 245, 245);
+  border-radius: var(--radius); */
   position: relative;
   height: 100%;
+}
+
+#gaWrapper{
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-radius: var(--radius);
+  padding: 1rem;
 }
 
 #graphArea {
@@ -115,7 +123,7 @@ body.dark .trainingImage img:hover{
   height: 100%;
   width: 100%;
   align-items: center;
-  overflow:hidden;
+  overflow:scroll;
 }
 @media screen and (max-width: 500px) {
   #graphArea {
@@ -136,11 +144,11 @@ body.dark .trainingImage img:hover{
 .node{
   height:2rem;
   width: 2rem; 
-  border-radius: 2px;
-  background: red;
+  border-radius: 4px;
+  background: black;
   margin: 0;
   padding: 0;
-  border: solid 1px var(--primary);
+  border: solid 2px white;
 }
 
 .colWrapper{
