--- a/content/projects/neuralNetCode/nn.css
+++ b/content/projects/neuralNetCode/nn.css
@@ -104,6 +104,7 @@ body.dark .trainingImage img{
   border-radius: var(--radius); */
   position: relative;
   height: 100%;
+  pointer-events: none;
 }
 
 #gaWrapper{
@@ -112,6 +113,9 @@ body.dark .trainingImage img{
   background-color: white;
   border-radius: var(--radius);
   padding: 1rem;
+  margin:0;
+  overflow:hidden;
+  position: relative;
 }
 
 #graphArea {
@@ -151,14 +155,19 @@ body.dark .trainingImage img{
   border: solid 0.1rem white;
 }
 
-.colWrapper{
+.col1Wrapper{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   height: 100%;
   width: 100%;
 }
+
+.gaCol.col_3{
+  align-items: end;
+}
+
 #svgContainer {
   width: 100%;
   height: 100%;
@@ -171,6 +180,48 @@ body.dark .trainingImage img{
 #statsText {
   margin:0;
 }
+
+path{
+  pointer-events:stroke;
+}
+
+path:hover{
+  stroke-width: 0.3rem;
+}
+
+.activeCircle {
+  opacity: 1 !important;
+}
+
+div #circle{
+  position:absolute;
+  transform:translate(-50%,-50%);
+  border-radius:var(--radius);
+  border:1px solid var(--border);
+  background:white;
+  pointer-events: none;
+  opacity: 0.0;
+  transition: opacity 0.1s ease-in-out;
+  z-index: 1;
+  font-size: small;
+  padding: 0.2rem;
+  color: black;
+}
+.outputPair{
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  gap: 0.5rem;
+}
+.outputPair img{
+  width: 1rem;
+  height: 1rem;
+  object-fit: contain;
+  image-rendering: pixelated;
+  border-radius: 0px;
+  margin:0px;
+}
+
 @media screen and (max-width: 500px) {
   .node{
     height:1rem;
@@ -181,5 +232,9 @@ body.dark .trainingImage img{
   }
   #svgContainer{
     opacity: 0.8;
+  }
+  .outputPair img{
+    width: 0.5rem;
+    height: 0.5rem;
   }
 }
