--- a/content/projects/neuralNetCode/nn.css
+++ b/content/projects/neuralNetCode/nn.css
@@ -97,7 +97,9 @@ input:focus, select:focus{
 body.dark .trainingImage img{
   filter: invert(1);
 }
-
+body.dark .outputPair img{
+  filter: invert(1);
+}
 #graphAreaContainer {
   width: 100%;
   /* background-color: rgb(245, 245, 245);
@@ -110,7 +112,7 @@ body.dark .trainingImage img{
 #gaWrapper{
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: var(--theme);
   border-radius: var(--radius);
   padding: 1rem;
   margin:0;
